feature: add all related with item creation
