# src/main/java/com/topwatch/back_topwatch/dto/CreateItemRequest.java
@@ -1,6 +1,10 @@
 package com.topwatch.back_topwatch.dto;
 
+import com.topwatch.back_topwatch.domain.enums.Type;
 import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.NotNull;
+
+import java.util.Set;
 
 public record CreateItemRequest(
 
@@ -9,6 +13,11 @@ public record CreateItemRequest(
 
         String description,
 
-        String urlAvatar
+        String urlAvatar,
+
+        @NotNull(message = "Type is required")
+        Type type,
+
+        Set<Long> categoryIds
 
 ) {}
